...
                                const Brand(
                                  text: 'Masinqo',
                                  size: 50,
                                ),
                                const SizedBox(height: 12),
                                CustomTextField(
                                  key: const Key('username_field'),
                                  hintText: "Username",
                                  controller: _usernameController,
                                  isArtist: isArtist,
                                  prefixIcon: Icon(
                                    Icons.person,
                                    color: isArtist
                                        ? AppColors.artist2
                                        : AppColors.listener4,
                                  ),
                                ),
                                const SizedBox(height: 12),
                                CustomTextField(
                                  key: const Key('email_field'),
                                  hintText: "Email",
                                  controller: _emailController,
                                  isArtist: isArtist,
                                  prefixIcon: Icon(
                                    Icons.mail,
                                    color: isArtist
                                        ? AppColors.artist2
                                        : AppColors.listener4,
                                  ),
                                ),
                                const SizedBox(height: 12),
                                CustomTextField(
                                  key: const Key('password_field'),
                                  hintText: "Password",
                                  controller: _passwordController,
                                  isArtist: isArtist,
                                  obscureText: true,
                                  prefixIcon: Icon(
                                    Icons.lock,
...
                                        ? AppColors.artist2
                                        : AppColors.listener4,
                                  ),
                                ),
                                const SizedBox(height: 12),
                                CustomTextField(
                                  key: const Key('confirm_password_field'),
                                  hintText: "Confirm Password",
                                  controller: _confirmPasswordController,
                                  isArtist: isArtist,
                                  obscureText: true,
                                  prefixIcon: Icon(
                                    Icons.lock,
...
                                const SizedBox(height: 20),
                                Row(
                                  mainAxisAlignment:
                                      MainAxisAlignment.spaceAround,
                                  children: <Widget>[
                                    TextButton(
                                      key: const Key('Artist_op'),
                                      onPressed: () {
                                        _isArtist.value = true;
                                      },
                                      style: ButtonStyle(
                                        backgroundColor:
                                            WidgetStateProperty.all<Color>(
...
                                              ? AppColors.artist2
                                              : Colors.white,
                                        ),
                                      ),
                                    ),
                                    TextButton(
                                      key: const Key('Listener_op'),
                                      onPressed: () {
                                        _isArtist.value = false;
                                      },
                                      style: ButtonStyle(
                                        backgroundColor:
                                            WidgetStateProperty.all<Color>(
...
                                      ),
                                    ),
                                  ],
                                ),
                                const SizedBox(height: 20),
                                ElevatedButton(
                                  key: const Key('signup_button'),
                                  onPressed: signupHandler(context),
                                  style: ButtonStyle(
                                    backgroundColor:
                                        WidgetStateProperty.all<Color>(
                                      isArtist
                                          ? AppColors.artist2
...
